--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
